# rag-docs-api

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/documents/: routes.py
app/api/v1/health/: routes.py
app/api/v1/rag/: routes.py
app/core/: config.py  exceptions.py  logging.py  responses.py
app/domains/documents/: chunker.py  schemas.py  service.py
app/domains/documents/ingestion/: base.py  factory.py  pdf.py  txt.py
app/domains/rag/: prompt.py  schemas.py  service.py
app/infrastructure/db/: base.py  init_db.py  session.py
app/infrastructure/db/models/: __init__.py  document.py  embedding.py
app/infrastructure/embeddings/: embedder.py  sentence_transformer.py
app/infrastructure/llm/: gemini_client.py
app/infrastructure/repositories/: embedding_repo.py
